--- a/assets/css/app.public.css
+++ b/assets/css/app.public.css
@@ -35,6 +35,7 @@ img {
   border:0;
 }
 
+/* 分享 */
 .share-container {
   position: relative;
 }
@@ -73,4 +74,209 @@ img {
   position: absolute;
   left: 0;
   top: 0px;
+}
+
+/* 伸展 */
+.collapse {
+    display: none;
+}
+/* 分页 */
+.paginatin-container {
+    background-color: #FFF;
+    padding: 10px;
+    text-align: right;
+}
+.pagination {
+
+}
+.pagination .active a {
+    background-color: #9acd44;
+    color: #FFF;
+}
+.pagination-item  {
+    display: inline-block;
+    vertical-align: top;
+    *display: inline;*zoom:1;
+}
+.pagination-item a {
+    padding: 3px 8px;
+    color: #999;
+    display: inline-block;
+    vertical-align: top;
+}
+.pagination-item a:hover {
+    text-decoration: underline;
+}
+
+/* layout */
+.yc-btn {
+    display: inline-block;
+    padding: 5px 15px;
+    background-color: #ddd;
+    color: #000;
+    margin: 0 7px;
+    border:0;
+    cursor: pointer;
+}
+.yc-btn-success {
+  color: #FFF;
+  background-color: #9acd44;
+}
+.yc-module {
+    background-color: #FFF;
+}
+.yc-module-headline {
+    padding: 5px 0;
+}
+.yc-module-title1 {
+    background-color: #9acd44;
+}
+.yc-module-title {
+    display: inline-block;
+    padding-right:35px;
+    padding-left: 15px;
+    height: 34px;
+    line-height: 34px;
+    color: #FFF;
+    background: #9acd44 url(../images/headline-bg.jpg) no-repeat 100% 0;
+}
+.yc-inline-b {
+    display: inline-block;
+    vertical-align: top;
+}
+.yc-block {
+    display: block;
+}
+
+
+.yc-wrapper {
+    width: 960px;
+    margin: 0 auto;
+}
+
+/* 顶部导航 */
+.yc-topnav {
+    background-color: #7bb255;
+    height: 30px;
+    line-height: 30px; 
+    overflow: hidden;
+    color: #FFF;
+}
+.yc-topnav-l {
+    float: left;
+}
+.yc-topnav-r {
+    float: right;
+}
+.yc-topnav .yc-link {
+    color: #FFF;
+    margin: 0 10px;
+}
+.yc-topnav .yc-link:hover {
+    text-decoration: underline;
+}
+.yc-topnav .yc-link:hover , .yc-topnav .yc-link:active {
+    color: #FFF;
+
+}
+.yc-link-usertips {
+    position: relative;
+    height: 100%;
+}
+.yc-link-usertips i {
+    display: block;
+    position: absolute;
+    right: -12px;
+    top:3px;
+    width: 10px;
+    height: 10px;
+    background: url(../images/icon-spot.png) no-repeat 0 0;
+}
+/* 头部菜单 */
+.yc-header {
+    border-bottom: 1px solid #ddd;
+    box-shadow: 3px 3px 3px #ddd;
+    background: #FFF url(../images/header-bg.jpg) no-repeat 0 0;
+}
+.yc-header .yc-wrapper{
+    position: relative;
+    height:100px;
+    /*background-color: red;*/
+}
+.yc-logo {
+    position: absolute;
+    width: 140px;
+    left: -10px;
+    top: 0;
+}
+.yc-logo-img {
+    width: 100%;
+}
+.yc-mainnav {
+    position: absolute;
+    bottom: 20px;
+    right: 100px;
+}
+.yc-mainnav-item {
+    display: inline-block;
+    vertical-align: top;
+    margin: 0 25px;
+    font-size: 14px;
+    color: #999;
+}
+.yc-mainnav a.cur {
+    color: #9dcd43;
+}
+
+
+/* footer */
+.yc-footer {
+    border-top: 5px solid #acce20;
+    background-color: #FFF;
+    margin-top: 30px;
+    overflow: hidden;
+}
+.yc-footer .yc-wrapper {
+    position: relative;
+    padding: 30px 0;
+    background: url(../images/footer-logo.jpg) no-repeat 30px center;
+}
+.yc-footer-info {
+    width: 500px;
+    margin: 0 auto; 
+}
+.yc-footer-info dl {
+    display: inline-block;
+    vertical-align: top;
+    width: 100px;
+    line-height: 2;
+}
+.yc-footer-info dl.last {
+    width: 130px;
+}
+.yc-footer-info dl a{
+    color: #7f7f7f;
+}
+.yc-footer-info dt a{
+    color: #86510d;
+}
+.yc-footer .yc-qrcode {
+    position: absolute;
+    width: 80px;
+    top: 20px;
+}
+.yc-footer .yc-qrcode-title {
+    text-align: center;
+    line-height: 1.2;
+    color: #86510d;
+}
+.yc-footer .yc-qrcode-img {
+    display: block;
+    width: 100%;
+}
+.yc-footer .yc-qrcode-weibo {
+    right: 120px;
+}
+.yc-footer .yc-qrcode-weixin {
+    right: 0px;
 }
