--- a/assets/css/app.public.css
+++ b/assets/css/app.public.css
@@ -14,6 +14,19 @@ th, td, caption{vertical-align: middle;}
 textarea{resize: none;}
 input, button, select, textarea{outline: none; border-radius: 0; font-family: inherit; font-size: inherit;}
 ul,ol,li{list-style: none;}
+.fr {
+  float: right;
+}
+.fl {
+  float: left;
+}
+.highlight {
+  padding: 9px 14px;
+  margin-top: 7px;
+  background-color: #f7f7f9;
+  border: 1px solid #e1e1e8;
+  border-radius: 4px;
+}
 
 sub,sup {
     font-size: 8px;
@@ -117,6 +130,9 @@ img {
     margin: 0 7px;
     border:0;
     cursor: pointer;
+}
+.yc-link {
+  color: #9acd44;
 }
 .yc-btn-success {
   color: #FFF;
@@ -279,4 +295,126 @@ img {
 }
 .yc-footer .yc-qrcode-weixin {
     right: 0px;
+}
+
+
+/* form */
+.yc-form-container {
+  position: relative;
+}
+.yc-form-container .form-actions .yc-btn-success {
+  width: 120px;
+}
+.yc .sb_dialog_layer_main .form-actions {
+  padding-left: 0;
+}
+.sb_dialog_layer_main .yc-form-container {
+  padding-bottom: 0;
+}
+.sb_dialog_layer_main .form-actions {
+  text-align: right;
+}
+.sb_dialog_layer_main .form-actions .yc-btn {
+  
+}
+.form-group {
+  margin-bottom: 10px;
+}
+.form-label {
+  display: inline-block;
+  width: 100px;
+  text-align: right;
+  margin-right: 15px;
+  vertical-align: top;
+}
+.form-img-cover {
+  position: absolute;
+  right: 20px;
+  top:0px;
+  width: 200px;
+}
+.form-textarea {
+  width: 250px;
+  height: 80px;
+}
+.form-input-w50{
+  width: 50px;
+}
+.form-input-w80{
+  width: 80px;
+}
+.form-input-w70{
+  width: 70px;
+}
+.form-input-w100{
+  width: 100px;
+}
+.form-input-w100{
+  width: 100px;
+}
+.form-input {
+  margin-right: 5px;
+}
+.yc-form-container .form-actions {
+  padding-left: 120px;
+}
+.form-tip {
+  padding: 0 7px;
+}
+.form-tip i {
+  color: red;
+  font-style: normal;
+  padding: 0 3px;
+}
+
+/* count */
+.count-container {
+  display: inline-block;
+  vertical-align: middle;
+}
+.count-container .count-btn {
+  display: inline-block;
+  vertical-align: top;
+  width:25px;
+  height: 25px;
+  font-size: 20px;
+  text-align: center;
+  line-height: 25px;
+  background-color: #ddd;
+  color: #999;
+  font-weight: bold;
+}
+.count-container .count-input {
+  width: 30px;
+  font-size: 14px;
+  padding: 0 3px;
+  height: 25px;
+  line-height: 25px;
+}
+/* dialog */
+.yc button.btn-primary, .yc button.btn-primary:hover {
+    background-color: #9acd44;
+}
+.yc .sb_dialog_layer_title h3 {
+}
+.yc .sb_dialog_layer_title {
+  /*background-color: #7bb255 ;*/
+  position: relative;
+}
+/* ie8下奇怪的bug 背景透明了 显示了dialog下的东西 */
+.yc .sb_dialog_btn_close {
+  display: block;
+  background-color: #F3F3F3;
+  filter:alpha(opacity:100);
+}
+.yc .sb_dialog_btn_close:hover {
+  filter:alpha(opacity:100);
+}
+/* 黄 */
+.yc-color2 {
+    color: #fba102;
+}
+/* 绿 */
+.yc-color1 {
+    color: #9acd44;
 }
