个人信息、我的收获、我的菜地详情、我的菜篓、确认订单

--- a/assets/css/app.public.css
+++ b/assets/css/app.public.css
@@ -20,6 +20,9 @@ ul,ol,li{list-style: none;}
 .fl {
   float: left;
 }
+.error {
+  color: red;
+}
 .highlight {
   padding: 9px 14px;
   margin-top: 7px;
